# accel-math

./: CMakeLists.txt  README.md
include/accel/: math  math.hpp
tests/: CMakeLists.txt  math_tests.cpp
